tests/spec/fail/defer_non_call.aja
fuc bad() -> void:
    defer x

bad()
